Updated existing tests with the new Deck initialization system